--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,7 @@
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 .header .logo {
   width: 120px;
   height: 31px;
@@ -328,4 +332,266 @@
   padding:20px 0;
   background: #cccccc26;
   border: 1px dashed #13121238;
+}
+
+/* #### Page Tin Tuc #### */
+
+ul.ht-breadcrumb {
+    padding: 10px 0px;
+    margin: 0;
+    font-size: 0;
+    border-radius: 2px;
+}
+ul.ht-breadcrumb > li {
+    position: relative;
+    display: inline-block;
+    z-index: 7;
+    vertical-align: top;
+    padding: 0 24px 0 0;
+    line-height: 16px;
+    font-size: 12px;
+}
+ul.ht-breadcrumb > li > a, ul.ht-breadcrumb > li > span {
+     position: relative;
+     padding: 9px 0;
+     line-height: 16px;
+     font-size: 12px;
+     color: #000;
+     max-width: 240px;
+     overflow: hidden;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+     z-index: 1;
+ }
+ul.ht-breadcrumb li a, ul.ht-breadcrumb li span {
+    display: block;
+}
+ul.ht-breadcrumb > li.active {
+    color: #2dbeb3;
+    line-height: 33px;
+}
+ul.ht-breadcrumb li h1 {
+    font-size: 13px;margin: 0px;padding: 0px;line-height: 33px;
+}
+ul.ht-breadcrumb > li:after {
+    content: "/";
+    display: block;
+    position: absolute;
+    top: 9px;
+    right: 0;
+    width: 24px;
+    line-height: 16px;
+    text-align: center;
+    color: #bdbdbd;
+}
+#news-detail-z1 .upload-cate .item-up{
+    background: url(https://printgo.vn/img/2.1_03.png) no-repeat;
+    width: 100%;
+    height: 91px;
+    background-size: contain;
+}
+
+#news-detail-z1 .upload-news{
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    height: 110px;
+}
+#news-detail-z1 .ht-news-leftct .inner_title .h2 span{
+    text-transform: uppercase;
+}
+#content-news-detail{
+    margin-top: 10px;
+}
+.content-news-detail .ht-product-card{
+    margin: 4px;
+}
+.product-news-detail{
+    width: 23%;
+    float: left;
+}
+.product-news-ct .product-news-detail{
+    width: 25%;
+}
+.title-product-news h2{
+    text-transform: uppercase;
+    font-size: 19px;
+    line-height: 0px;
+    font-weight: 700;
+}
+.title-product-news{
+    padding: 25px 0px;
+}
+.news-lq .card-header {
+    height: 187px;
+}
+.news-lq .ht-news-card .news-title a{ height: 44px; }
+.news-lq .news-meta {
+    padding: 17px 7px 16px 0px;
+    text-align: left;
+    border-bottom: 1px solid #ccc;
+    width: 69%;
+    margin-left: 39px;
+}
+.news-lq .ht-news-card{
+    padding: 0;
+}
+.cate-news-content .ht-news-card{
+    padding: 0;
+}
+.news-lq .btn-cateall{
+    margin: 0;
+}
+#content-news-detail .ht-news-title{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 19px;
+    line-height: 30px;
+}
+#content-news-detail .ht-article-card .ht-news-meta {
+    font-size: 12px;
+    padding: 10px 0px 0px 0px;
+}
+#content-news-detail .ht-article-card .ht-news-meta > span i{
+    margin-right: 8px;
+    color: #2dbeb3;
+}
+#content-news-detail .ht-news-leftct .inner_title .h2{
+    text-transform: uppercase;
+}
+#content-news-detail .btn-printnow{
+    width: 198px;
+    text-align: center;
+    margin: 0 auto;
+    background:#ee3d77;
+}
+#content-news-detail .ht-news-leftct .bt-4new{
+    margin: 26px 0px 0px 0px;
+}
+.ht-news-card {
+    padding: 0;
+    margin-bottom: 19px;
+    line-height: 16px;
+    font-size: 12px;
+    background-color: #f7f6fa;
+}
+.card-header {
+    display: block;
+    border-radius: 2px 2px 0 0;
+    color: #000;
+    padding: 0;
+}
+.ht-news-card .card-content {
+    padding: 12px 0 0;
+}
+.ht-news-card .news-title {
+    padding: 10px 7px 0px 7px;
+    font-size: 13px;
+    font-weight: 700;
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 20px;
+    max-height: 48px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 0 6px;
+}
+.ht-news-card .news-excerpt {
+    margin: 8px 0px 28px;
+    font-size: 13px;
+    color: #616161;
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 18px;
+    height: 38px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.news-excerpt {
+    padding: 1px 7px 0px 7px;
+}
+.ht-rectangle {
+    position: relative;
+    display: block;
+}
+.ht-rectangle > .ht-inner {
+    display: block;
+    height: 187px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.ht-rectangle > .ht-inner img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.unset{
+    display: unset;
+}
+.ht-news-leftct .inner_title .h2 {
+    line-height: 0px;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    margin-top: 20px;
+}
+.sliderbar-detail-news .sidebar-list-cate {
+    margin: 15px 0px 28px 0px;
+}
+.sliderbar-detail-news .sidebar-list-cate .sidebar-category-list {
+    padding: 0;
+    margin: 0;
+}
+.sliderbar-detail-news .sidebar-list-cate .sidebar-category-list li {
+    position: relative;
+    margin: 0 0 6px;
+    padding: 0 0 0 16px;
+}
+.sliderbar-detail-news .sidebar-list-cate .sidebar-category-list li i.fa {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    line-height: 16px;
+    color: #aaa;
+}
+.sliderbar-detail-news .sidebar-list-cate .sidebar-category-list li a {
+    display: inline-block;
+    line-height: 16px;
+    font-size: 12px;
+    color: #555;
+}
+.ht-news-leftct .inner_title .des {
+    margin: 0;
+    font-size: 12px;
+}
+.des {
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 400;
+    color: #000;
+    line-height: 17px;
+    margin: 0 0 10px;
+}
+.ht-left-2 a img {
+    margin-bottom: 20px;
+}
+.panel-title a {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+/* Mobile */
+
+@media (max-width: 991px) {
+    ul.ht-breadcrumb {
+        white-space: nowrap;
+        overflow: overlay;
+    }
 }
